--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,20 @@
 <body>
 <h1>Recipes !!!</h1>
 
+<table>
+    <thead>
+        <tr>
+            <td>Id</td>
+            <td>Description</td>
+            <td>Name</td>
+        </tr>
+    </thead>
+    <tr th:each="recipe : ${recipes}">
+        <td th:text="${recipe.id}"></td>
+        <td th:text="${recipe.description}"></td>
+        <td th:text="${recipe.getDirections()}"></td>
+    </tr>
+</table>
+
 </body>
 </html>
